package main

import (
	"context"
	"fmt"
	"log"
	"net/http"
	"os"
	"os/signal"
	"syscall"
	"time"

	"github.com/gin-gonic/gin"

	"github.com/xiebiao/bookstore/services/api-gateway/internal/client"
	"github.com/xiebiao/bookstore/services/api-gateway/internal/config"
	"github.com/xiebiao/bookstore/services/api-gateway/internal/handler"
	"github.com/xiebiao/bookstore/services/api-gateway/internal/middleware"
)

// main API Gatewayå¯åŠ¨å…¥å£
//
// æ•™å­¦è¦ç‚¹ï¼š
// 1. Gatewayä½œä¸ºHTTPå…¥å£ï¼Œè½¬å‘è¯·æ±‚åˆ°åç«¯gRPCæœåŠ¡
// 2. ä¾èµ–æ³¨å…¥ï¼šé…ç½® â†’ gRPCå®¢æˆ·ç«¯ â†’ Handler â†’ è·¯ç”±
// 3. ä¼˜é›…å…³é—­ï¼šæ•è·ä¿¡å·ï¼Œå…³é—­è¿æ¥
//
// æ¶æ„å±‚æ¬¡ï¼š
// HTTPè¯·æ±‚ â†’ Gin Router â†’ Middleware â†’ Handler â†’ gRPC Client â†’ Backend Service
func main() {
	// æ­¥éª¤1: åŠ è½½é…ç½®
	configPath := os.Getenv("CONFIG_PATH")
	if configPath == "" {
		configPath = "config/config.yaml"
	}

	cfg, err := config.Load(configPath)
	if err != nil {
		log.Fatalf("âŒ åŠ è½½é…ç½®å¤±è´¥: %v", err)
	}

	fmt.Printf("ğŸš€ å¯åŠ¨ %s v%s\n", cfg.Server.Name, cfg.Server.Version)

	// æ­¥éª¤2: åˆå§‹åŒ–gRPCå®¢æˆ·ç«¯
	userClient, err := client.NewUserClient(cfg.GRPC.UserService)
	if err != nil {
		log.Fatalf("âŒ åˆå§‹åŒ–user-serviceå®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer userClient.Close()
	fmt.Println("âœ“ user-serviceå®¢æˆ·ç«¯è¿æ¥æˆåŠŸ")

	// åç»­æ·»åŠ å…¶ä»–æœåŠ¡å®¢æˆ·ç«¯ï¼š
	// catalogClient, _ := client.NewCatalogClient(cfg.GRPC.CatalogService)
	// orderClient, _ := client.NewOrderClient(cfg.GRPC.OrderService)

	// æ­¥éª¤3: åˆå§‹åŒ–Handler
	userHandler := handler.NewUserHandler(userClient)

	// æ­¥éª¤4: è®¾ç½®Ginæ¨¡å¼
	gin.SetMode(cfg.Server.Mode)

	// æ­¥éª¤5: åˆ›å»ºGinå¼•æ“
	router := gin.New()

	// æ­¥éª¤6: æ³¨å†Œå…¨å±€ä¸­é—´ä»¶
	// æ•™å­¦è¯´æ˜ï¼š
	// ä¸­é—´ä»¶æ‰§è¡Œé¡ºåºï¼šLogger â†’ Recovery â†’ CORS â†’ è·¯ç”±åŒ¹é… â†’ Authï¼ˆå¦‚æœæœ‰ï¼‰ â†’ Handler
	router.Use(middleware.Logger())       // è¯·æ±‚æ—¥å¿—
	router.Use(gin.Recovery())            // Panicæ¢å¤
	router.Use(middleware.CORS(cfg.CORS)) // è·¨åŸŸå¤„ç†

	// æ­¥éª¤7: æ³¨å†Œè·¯ç”±
	// æ•™å­¦é‡ç‚¹ï¼š
	// 1. å…¬å¼€è·¯ç”±ï¼ˆä¸éœ€è¦é‰´æƒï¼‰
	// 2. å—ä¿æŠ¤è·¯ç”±ï¼ˆéœ€è¦Authä¸­é—´ä»¶é‰´æƒï¼‰
	setupRoutes(router, userHandler, userClient)

	// æ­¥éª¤8: åˆ›å»ºHTTPæœåŠ¡å™¨
	srv := &http.Server{
		Addr:         fmt.Sprintf(":%d", cfg.Server.HTTPPort),
		Handler:      router,
		ReadTimeout:  time.Duration(cfg.Server.ReadTimeout) * time.Second,
		WriteTimeout: time.Duration(cfg.Server.WriteTimeout) * time.Second,
	}

	// æ­¥éª¤9: å¯åŠ¨HTTPæœåŠ¡å™¨ï¼ˆgoroutineï¼‰
	go func() {
		fmt.Printf("ğŸš€ API Gatewayå¯åŠ¨æˆåŠŸ: http://localhost:%d\n", cfg.Server.HTTPPort)
		fmt.Println("\nğŸ“– APIç«¯ç‚¹ï¼š")
		fmt.Println("  POST /api/v1/auth/register   - ç”¨æˆ·æ³¨å†Œ")
		fmt.Println("  POST /api/v1/auth/login      - ç”¨æˆ·ç™»å½•")
		fmt.Println("  POST /api/v1/auth/refresh    - åˆ·æ–°Token")
		fmt.Println("  GET  /api/v1/users/:id       - è·å–ç”¨æˆ·ä¿¡æ¯ï¼ˆéœ€è¦é‰´æƒï¼‰")
		fmt.Println("  GET  /health                 - å¥åº·æ£€æŸ¥")
		fmt.Println()

		if err := srv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
			log.Fatalf("âŒ HTTPæœåŠ¡å™¨å¯åŠ¨å¤±è´¥: %v", err)
		}
	}()

	// æ­¥éª¤10: ä¼˜é›…å…³é—­
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	fmt.Println("\nâ³ æ­£åœ¨ä¼˜é›…å…³é—­æœåŠ¡...")

	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	if err := srv.Shutdown(ctx); err != nil {
		log.Fatal("âŒ æœåŠ¡å™¨å¼ºåˆ¶å…³é—­:", err)
	}

	fmt.Println("âœ“ HTTPæœåŠ¡å™¨å·²å…³é—­")
	fmt.Println("âœ“ gRPCå®¢æˆ·ç«¯å·²å…³é—­")
	fmt.Println("ğŸ‘‹ æœåŠ¡å·²å®Œå…¨å…³é—­")
}

// setupRoutes è®¾ç½®è·¯ç”±
//
// æ•™å­¦è¦ç‚¹ï¼š
// 1. è·¯ç”±åˆ†ç»„ï¼šæŒ‰åŠŸèƒ½æ¨¡å—åˆ†ç»„ï¼ˆauthã€usersã€booksã€ordersï¼‰
// 2. ä¸­é—´ä»¶åº”ç”¨ï¼šå…¬å¼€è·¯ç”± vs å—ä¿æŠ¤è·¯ç”±
// 3. RESTfulè®¾è®¡ï¼šç»Ÿä¸€çš„APIé£æ ¼
func setupRoutes(router *gin.Engine, userHandler *handler.UserHandler, userClient *client.UserClient) {
	// å¥åº·æ£€æŸ¥ï¼ˆæ— éœ€é‰´æƒï¼‰
	router.GET("/health", func(c *gin.Context) {
		c.JSON(200, gin.H{
			"status":  "ok",
			"service": "api-gateway",
			"version": "1.0.0",
		})
	})

	// API v1è·¯ç”±ç»„
	v1 := router.Group("/api/v1")
	{
		// è®¤è¯è·¯ç”±ï¼ˆå…¬å¼€ï¼Œæ— éœ€é‰´æƒï¼‰
		auth := v1.Group("/auth")
		{
			auth.POST("/register", userHandler.Register)    // æ³¨å†Œ
			auth.POST("/login", userHandler.Login)          // ç™»å½•
			auth.POST("/refresh", userHandler.RefreshToken) // åˆ·æ–°Token
		}

		// ç”¨æˆ·è·¯ç”±ï¼ˆéœ€è¦é‰´æƒï¼‰
		users := v1.Group("/users")
		users.Use(middleware.Auth(userClient)) // åº”ç”¨Authä¸­é—´ä»¶
		{
			users.GET("/:id", userHandler.GetUser) // è·å–ç”¨æˆ·ä¿¡æ¯
		}

		// åç»­æ·»åŠ å…¶ä»–è·¯ç”±ç»„ï¼š
		// books := v1.Group("/books")
		// {
		//     books.GET("", bookHandler.List)       // åˆ—è¡¨ï¼ˆå…¬å¼€ï¼‰
		//     books.POST("", middleware.Auth(userClient), bookHandler.Create) // ä¸Šæ¶ï¼ˆéœ€è¦é‰´æƒï¼‰
		// }
		//
		// orders := v1.Group("/orders")
		// orders.Use(middleware.Auth(userClient)) // æ‰€æœ‰è®¢å•æ¥å£éƒ½éœ€è¦é‰´æƒ
		// {
		//     orders.POST("", orderHandler.Create)
		//     orders.GET("/:id", orderHandler.GetByID)
		// }
	}
}

// =========================================
// æ•™å­¦æ€»ç»“ï¼šAPI Gatewayå¯åŠ¨æµç¨‹
// =========================================
//
// 1. ä¾èµ–æ³¨å…¥é¡ºåºï¼š
//    é…ç½® â†’ gRPCå®¢æˆ·ç«¯ â†’ Handler â†’ Router
//    - æ¯ä¸€å±‚åªä¾èµ–ä¸Šä¸€å±‚
//    - ä¾¿äºå•å…ƒæµ‹è¯•ï¼ˆMockä¾èµ–ï¼‰
//
// 2. ä¸­é—´ä»¶åº”ç”¨ï¼š
//    - å…¨å±€ä¸­é—´ä»¶ï¼šLoggerã€Recoveryã€CORS
//    - è·¯ç”±ç»„ä¸­é—´ä»¶ï¼šAuthï¼ˆåªåº”ç”¨äºéœ€è¦é‰´æƒçš„è·¯ç”±ï¼‰
//    - æ‰§è¡Œé¡ºåºï¼šä»å¤–åˆ°å†…
//
// 3. è·¯ç”±è®¾è®¡ï¼š
//    RESTfulé£æ ¼ï¼š
//    - GET /api/v1/users/:id      ï¼ˆè·å–èµ„æºï¼‰
//    - POST /api/v1/users          ï¼ˆåˆ›å»ºèµ„æºï¼‰
//    - PUT /api/v1/users/:id       ï¼ˆæ›´æ–°èµ„æºï¼‰
//    - DELETE /api/v1/users/:id    ï¼ˆåˆ é™¤èµ„æºï¼‰
//
// 4. ä¼˜é›…å…³é—­ï¼š
//    - æ•è·SIGINT/SIGTERMä¿¡å·
//    - åœæ­¢æ¥æ”¶æ–°è¯·æ±‚
//    - ç­‰å¾…ç°æœ‰è¯·æ±‚å¤„ç†å®Œæˆï¼ˆæœ€å¤š10ç§’ï¼‰
//    - å…³é—­gRPCè¿æ¥
//
// 5. å¥åº·æ£€æŸ¥ï¼š
//    - GET /health
//    - Kubernetes liveness/readiness probe
//    - è´Ÿè½½å‡è¡¡å™¨å¥åº·æ£€æŸ¥
//
// 6. åç»­æ‰©å±•ï¼š
//    - æ·»åŠ Swaggeræ–‡æ¡£ï¼ˆswaggo/swagï¼‰
//    - æ·»åŠ é™æµä¸­é—´ä»¶ï¼ˆrate limitingï¼‰
//    - æ·»åŠ ç›‘æ§æŒ‡æ ‡ï¼ˆPrometheusï¼‰
//    - é›†æˆæœåŠ¡å‘ç°ï¼ˆConsulï¼‰
